--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -558,6 +558,10 @@ video {
   position: fixed;
 }
 
+.absolute {
+  position: absolute;
+}
+
 .relative {
   position: relative;
 }
@@ -570,18 +574,26 @@ video {
   top: 0px;
 }
 
-.z-30 {
-  z-index: 30;
+.top-20 {
+  top: 5rem;
 }
 
-.mx-auto {
-  margin-left: auto;
-  margin-right: auto;
+.top-16 {
+  top: 4rem;
+}
+
+.z-30 {
+  z-index: 30;
 }
 
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
 }
 
 .mb-2 {
@@ -648,13 +660,13 @@ video {
   height: 100%;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
 .h-min {
   height: -moz-min-content;
   height: min-content;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .w-1\/2 {
@@ -685,41 +697,44 @@ video {
   width: 250px;
 }
 
-.w-full {
-  width: 100%;
+.w-\[calc\(100vw-32px\)\] {
+  width: calc(100vw - 32px);
 }
 
-.w-min {
-  width: -moz-min-content;
-  width: min-content;
+.w-full {
+  width: 100%;
 }
 
 .w-screen {
   width: 100vw;
 }
 
-.w-\[\] {
-  width: ;
+.w-\[full\] {
+  width: full;
 }
 
-.w-\[100\] {
-  width: 100;
+.w-\[calc\(\)\] {
+  width: calc();
 }
 
-.w-\[100vw\] {
-  width: 100vw;
+.w-\[calc\(100\)\] {
+  width: calc(100);
 }
 
-.w-\[100vw-\] {
-  width: 100vw-;
+.w-\[calc\(100\%-\)\] {
+  width: calc(100% - );
 }
 
-.w-\[100vw-32px\] {
-  width: 100vw-32px;
+.w-\[calc\(100\%-18px\)\] {
+  width: calc(100% - 18px);
 }
 
-.w-\[calc\(100vw-32px\)\] {
-  width: calc(100vw - 32px);
+.w-\[calc\(100\%-px\)\] {
+  width: calc(100% - px);
+}
+
+.w-\[calc\(100\%-32px\)\] {
+  width: calc(100% - 32px);
 }
 
 .min-w-\[568px\] {
@@ -772,10 +787,6 @@ video {
 
 .gap-6 {
   gap: 1.5rem;
-}
-
-.gap-8 {
-  gap: 2rem;
 }
 
 .overflow-x-auto {
@@ -852,11 +863,6 @@ video {
   border-color: rgb(220 38 38 / var(--tw-border-opacity));
 }
 
-.bg-accent-d {
-  --tw-bg-opacity: 1;
-  background-color: rgb(147 153 162 / var(--tw-bg-opacity));
-}
-
 .bg-bg-light {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -872,17 +878,16 @@ video {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
-.bg-red-600 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
-}
-
 .bg-transparent {
   background-color: transparent;
 }
 
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-4 {
@@ -916,11 +921,6 @@ video {
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
 }
 
 .py-4 {
@@ -1049,11 +1049,6 @@ video {
   color: rgb(2 6 23 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1087,6 +1082,16 @@ video {
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-bg-light:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-secondary-l:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(94 111 120 / var(--tw-bg-opacity));
+}
+
 .hover\:text-blue-500:hover {
   --tw-text-opacity: 1;
   color: rgb(59 130 246 / var(--tw-text-opacity));
@@ -1100,6 +1105,11 @@ video {
 .hover\:text-red-600:hover {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
+.hover\:text-white:hover {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -1155,9 +1165,24 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
+.dark\:hover\:bg-bg-dark:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(11 19 30 / var(--tw-bg-opacity));
+}
+
+.dark\:hover\:bg-secondary-d:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(136 153 162 / var(--tw-bg-opacity));
+}
+
 .dark\:hover\:text-white:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.dark\:hover\:text-black:hover:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 @media (min-width: 450px) {
@@ -1209,6 +1234,34 @@ video {
 
   .lg\:w-full {
     width: 100%;
+  }
+
+  .lg\:w-2 {
+    width: 0.5rem;
+  }
+
+  .lg\:w-\[calc\(\)\] {
+    width: calc();
+  }
+
+  .lg\:w-\[calc\(2\/3\)\] {
+    width: calc(2 / 3);
+  }
+
+  .lg\:w-\[calc\(66\.66667\%-\)\] {
+    width: calc(66.66667% - );
+  }
+
+  .lg\:w-\[calc\(66\.66667\%-8px\)\] {
+    width: calc(66.66667% - 8px);
+  }
+
+  .lg\:w-\[calc\(66\.66667\%-16px\)\] {
+    width: calc(66.66667% - 16px);
+  }
+
+  .lg\:w-\[calc\(66\.66667\%-18px\)\] {
+    width: calc(66.66667% - 18px);
   }
 
   .lg\:flex-row {
