--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -574,12 +574,20 @@ video {
   top: 0px;
 }
 
-.top-20 {
-  top: 5rem;
-}
-
 .top-16 {
   top: 4rem;
+}
+
+.bottom-0 {
+  bottom: 0px;
+}
+
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
+.-bottom-10 {
+  bottom: -2.5rem;
 }
 
 .z-30 {
@@ -589,11 +597,6 @@ video {
 .my-2 {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
-}
-
-.mx-4 {
-  margin-left: 1rem;
-  margin-right: 1rem;
 }
 
 .mb-2 {
@@ -697,8 +700,8 @@ video {
   width: 250px;
 }
 
-.w-\[calc\(100vw-32px\)\] {
-  width: calc(100vw - 32px);
+.w-\[calc\(100\%-32px\)\] {
+  width: calc(100% - 32px);
 }
 
 .w-full {
@@ -709,32 +712,12 @@ video {
   width: 100vw;
 }
 
-.w-\[full\] {
-  width: full;
+.w-20 {
+  width: 5rem;
 }
 
-.w-\[calc\(\)\] {
-  width: calc();
-}
-
-.w-\[calc\(100\)\] {
-  width: calc(100);
-}
-
-.w-\[calc\(100\%-\)\] {
-  width: calc(100% - );
-}
-
-.w-\[calc\(100\%-18px\)\] {
-  width: calc(100% - 18px);
-}
-
-.w-\[calc\(100\%-px\)\] {
-  width: calc(100% - px);
-}
-
-.w-\[calc\(100\%-32px\)\] {
-  width: calc(100% - 32px);
+.w-12 {
+  width: 3rem;
 }
 
 .min-w-\[568px\] {
@@ -821,6 +804,10 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
+}
+
+.rounded {
+  border-radius: 0.25rem;
 }
 
 .border {
@@ -1082,14 +1069,24 @@ video {
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-bg-light:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-secondary-l:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(94 111 120 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-primary-l:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(27 30 34 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-accent-l:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(43 49 59 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-500:hover {
@@ -1105,11 +1102,6 @@ video {
 .hover\:text-red-600:hover {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
-}
-
-.hover\:text-white:hover {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -1165,24 +1157,19 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
-.dark\:hover\:bg-bg-dark:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(11 19 30 / var(--tw-bg-opacity));
-}
-
 .dark\:hover\:bg-secondary-d:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(136 153 162 / var(--tw-bg-opacity));
 }
 
+.dark\:hover\:bg-black:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .dark\:hover\:text-white:hover:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.dark\:hover\:text-black:hover:is(.dark *) {
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
 @media (min-width: 450px) {
@@ -1230,34 +1217,6 @@ video {
 
   .lg\:w-2\/3 {
     width: 66.666667%;
-  }
-
-  .lg\:w-full {
-    width: 100%;
-  }
-
-  .lg\:w-2 {
-    width: 0.5rem;
-  }
-
-  .lg\:w-\[calc\(\)\] {
-    width: calc();
-  }
-
-  .lg\:w-\[calc\(2\/3\)\] {
-    width: calc(2 / 3);
-  }
-
-  .lg\:w-\[calc\(66\.66667\%-\)\] {
-    width: calc(66.66667% - );
-  }
-
-  .lg\:w-\[calc\(66\.66667\%-8px\)\] {
-    width: calc(66.66667% - 8px);
-  }
-
-  .lg\:w-\[calc\(66\.66667\%-16px\)\] {
-    width: calc(66.66667% - 16px);
   }
 
   .lg\:w-\[calc\(66\.66667\%-18px\)\] {
