--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -566,6 +566,10 @@ video {
   position: relative;
 }
 
+.bottom-10 {
+  bottom: 2.5rem;
+}
+
 .left-0 {
   left: 0px;
 }
@@ -580,14 +584,6 @@ video {
 
 .bottom-0 {
   bottom: 0px;
-}
-
-.bottom-10 {
-  bottom: 2.5rem;
-}
-
-.-bottom-10 {
-  bottom: -2.5rem;
 }
 
 .z-30 {
@@ -672,6 +668,82 @@ video {
   height: 100vh;
 }
 
+.h-20 {
+  height: 5rem;
+}
+
+.h-\[\] {
+  height: ;
+}
+
+.h-\[1\/12\] {
+  height: 1/12;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-\[1\/7\] {
+  height: 1/7;
+}
+
+.h-1 {
+  height: 0.25rem;
+}
+
+.h-\[1\] {
+  height: 1;
+}
+
+.h-\[142857\] {
+  height: 142857;
+}
+
+.h-\[14\.2857\] {
+  height: 14.2857;
+}
+
+.h-\[14\.2857\%\] {
+  height: 14.2857%;
+}
+
+.h-1\/6 {
+  height: 16.666667%;
+}
+
+.min-h-6 {
+  min-height: 1.5rem;
+}
+
+.min-h-96 {
+  min-height: 24rem;
+}
+
+.min-h-\[600px\] {
+  min-height: 600px;
+}
+
+.min-h-\[500px\] {
+  min-height: 500px;
+}
+
+.min-h-1 {
+  min-height: 0.25rem;
+}
+
+.min-h-\[11\] {
+  min-height: 11;
+}
+
+.min-h-\[115px\] {
+  min-height: 115px;
+}
+
+.min-h-\[100px\] {
+  min-height: 100px;
+}
+
 .w-1\/2 {
   width: 50%;
 }
@@ -710,14 +782,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-12 {
-  width: 3rem;
 }
 
 .min-w-\[568px\] {
@@ -804,10 +868,6 @@ video {
 
 .rounded-xl {
   border-radius: 0.75rem;
-}
-
-.rounded {
-  border-radius: 0.25rem;
 }
 
 .border {
@@ -1074,16 +1134,6 @@ video {
   background-color: rgb(94 111 120 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-primary-l:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(27 30 34 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-accent-l:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(43 49 59 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1152,6 +1202,11 @@ video {
   caret-color: #fff;
 }
 
+.dark\:hover\:bg-black:hover:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .dark\:hover\:bg-gray-600:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
@@ -1160,11 +1215,6 @@ video {
 .dark\:hover\:bg-secondary-d:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(136 153 162 / var(--tw-bg-opacity));
-}
-
-.dark\:hover\:bg-black:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
 .dark\:hover\:text-white:hover:is(.dark *) {
@@ -1207,10 +1257,6 @@ video {
 }
 
 @media (min-width: 1024px) {
-  .lg\:h-full {
-    height: 100%;
-  }
-
   .lg\:w-1\/3 {
     width: 33.333333%;
   }
