--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -582,6 +582,18 @@ video {
   top: 4rem;
 }
 
+.bottom-0 {
+  bottom: 0px;
+}
+
+.bottom-16 {
+  bottom: 4rem;
+}
+
+.bottom-20 {
+  bottom: 5rem;
+}
+
 .z-30 {
   z-index: 30;
 }
@@ -858,6 +870,16 @@ video {
   background-color: transparent;
 }
 
+.bg-component-dark {
+  --tw-bg-opacity: 1;
+  background-color: rgb(32 43 59 / var(--tw-bg-opacity));
+}
+
+.bg-secondary-l {
+  --tw-bg-opacity: 1;
+  background-color: rgb(94 111 120 / var(--tw-bg-opacity));
+}
+
 .p-2 {
   padding: 0.5rem;
 }
@@ -1031,6 +1053,23 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-xl {
+  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-black {
+  --tw-shadow-color: #000;
+  --tw-shadow: var(--tw-shadow-colored);
+}
+
 .backdrop-blur-sm {
   --tw-backdrop-blur: blur(4px);
   -webkit-backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
@@ -1108,6 +1147,11 @@ video {
   background-color: rgb(32 43 59 / var(--tw-bg-opacity));
 }
 
+.dark\:bg-secondary-d:is(.dark *) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(136 153 162 / var(--tw-bg-opacity));
+}
+
 .dark\:bg-opacity-50:is(.dark *) {
   --tw-bg-opacity: 0.5;
 }
@@ -1134,6 +1178,11 @@ video {
 
 .dark\:caret-white:is(.dark *) {
   caret-color: #fff;
+}
+
+.dark\:shadow-white:is(.dark *) {
+  --tw-shadow-color: #fff;
+  --tw-shadow: var(--tw-shadow-colored);
 }
 
 .dark\:hover\:bg-black:hover:is(.dark *) {
