--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -639,10 +639,6 @@ video {
   height: 3.5rem;
 }
 
-.h-20 {
-  height: 5rem;
-}
-
 .h-6 {
   height: 1.5rem;
 }
@@ -812,6 +808,10 @@ video {
   border-bottom-right-radius: 0.5rem;
 }
 
+.\!border {
+  border-width: 1px !important;
+}
+
 .border {
   border-width: 1px;
 }
@@ -846,6 +846,11 @@ video {
   border-top-width: 0px;
 }
 
+.\!border-red-600 {
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(220 38 38 / var(--tw-border-opacity)) !important;
+}
+
 .border-accent-l {
   --tw-border-opacity: 1;
   border-color: rgb(43 49 59 / var(--tw-border-opacity));
@@ -854,11 +859,6 @@ video {
 .border-gray-600 {
   --tw-border-opacity: 1;
   border-color: rgb(75 85 99 / var(--tw-border-opacity));
-}
-
-.border-red-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(220 38 38 / var(--tw-border-opacity));
 }
 
 .border-secondary-l {
@@ -945,12 +945,20 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.pr-4 {
+  padding-right: 1rem;
+}
+
 .pt-1 {
   padding-top: 0.25rem;
 }
 
 .pt-7 {
   padding-top: 1.75rem;
+}
+
+.pl-2 {
+  padding-left: 0.5rem;
 }
 
 .text-center {
@@ -1100,7 +1108,7 @@ video {
   color: rgb(71 85 105 / var(--tw-text-opacity));
 }
 
-.hover\:bg-gray-400:hover {
+.hover\:bg-component-light-hover:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
@@ -1110,19 +1118,9 @@ video {
   background-color: rgb(206 212 218 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-secondary-l:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(94 111 120 / var(--tw-bg-opacity));
-}
-
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.hover\:bg-component-light-hover:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
 .hover\:text-blue-500:hover {
@@ -1138,6 +1136,15 @@ video {
 .hover\:text-red-600:hover {
   --tw-text-opacity: 1;
   color: rgb(220 38 38 / var(--tw-text-opacity));
+}
+
+.focus\:border:focus {
+  border-width: 1px;
+}
+
+.focus\:border-blue-600:focus {
+  --tw-border-opacity: 1;
+  border-color: rgb(37 99 235 / var(--tw-border-opacity));
 }
 
 .focus\:outline-none:focus {
@@ -1218,7 +1225,7 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.dark\:hover\:bg-gray-600:hover:is(.dark *) {
+.dark\:hover\:bg-component-dark-hover:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
@@ -1226,11 +1233,6 @@ video {
 .dark\:hover\:bg-secondary-d:hover:is(.dark *) {
   --tw-bg-opacity: 1;
   background-color: rgb(136 153 162 / var(--tw-bg-opacity));
-}
-
-.dark\:hover\:bg-component-light-hover:hover:is(.dark *) {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
 .dark\:hover\:text-white:hover:is(.dark *) {
@@ -1289,8 +1291,8 @@ video {
     width: 66.666667%;
   }
 
-  .lg\:w-\[calc\(66\.66667\%-18px\)\] {
-    width: calc(66.66667% - 18px);
+  .lg\:w-\[calc\(66\.66667\%-34px\)\] {
+    width: calc(66.66667% - 34px);
   }
 
   .lg\:flex-row {
