--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -1083,6 +1083,16 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-accent-l {
+  --tw-text-opacity: 1;
+  color: rgb(43 49 59 / var(--tw-text-opacity));
+}
+
+.text-accent-d {
+  --tw-text-opacity: 1;
+  color: rgb(147 153 162 / var(--tw-text-opacity));
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -1222,6 +1232,16 @@ video {
 .dark\:text-slate-50:is(.dark *) {
   --tw-text-opacity: 1;
   color: rgb(248 250 252 / var(--tw-text-opacity));
+}
+
+.dark\:text-accent-d:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(147 153 162 / var(--tw-text-opacity));
+}
+
+.dark\:text-accent-l:is(.dark *) {
+  --tw-text-opacity: 1;
+  color: rgb(43 49 59 / var(--tw-text-opacity));
 }
 
 .dark\:caret-white:is(.dark *) {
